octo-cluster/cluster/apps/test-site/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-site
  namespace: test-site
  labels:
    app: test-site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-site
  template:
    metadata:
      labels:
        app: test-site
    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html-volume
          configMap:
            name: html
