octo-cluster/cluster/apps/test-site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-site
  namespace: test-site
spec:
  selector:
    app: test-site
  ports:
    - protocol: TCP
      port: 80
